--- a/css.css
+++ b/css.css
@@ -30,7 +30,7 @@ header a {
 }
 .banner {
     background-image: url('assets/recepcao.png');
-    background-size: contain;
+    background-size: cover;
     width: 100%;
     height: 86vh;
     padding-bottom: 20%;
@@ -126,6 +126,7 @@ header a {
 iframe {
     margin-left: 1%;
     margin-top: 2%;
+    margin-right: 1%;
 }
 footer {
     background-color: darkcyan;
@@ -144,3 +145,4 @@ footer p {
 .para5 {
     margin-top: 1%;
 }
+@media only screen and (max-width: 480px)
